exports[`test appends classes 1`] = `
<div
  className="input append me"
  style={Object {}}>
  <Label
    disabed={false}
    labelFor="2"
    labelName="Test Name" />
  <input
    autofocus={false}
    className={null}
    classes={
      Array [
        "append",
        "me",
      ]
    }
    defaultValue={null}
    disabled={false}
    errorTest={null}
    format={[Function]}
    hideLabel={false}
    id="2"
    inputClasses={null}
    label="Test Name"
    name="testname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="testholder"
    status={null}
    style={null}
    theme={null}
    type="file"
    validation={[Function]} />
</div>
`;

exports[`test has error state 1`] = `
<div
  className="input input--alert"
  style={Object {}}>
  <Label
    disabed={false}
    labelFor="2"
    labelName="Test Name" />
  <input
    autofocus={false}
    className={null}
    classes={null}
    defaultValue={null}
    disabled={false}
    errorTest={null}
    format={[Function]}
    hideLabel={false}
    id="2"
    inputClasses={null}
    label="Test Name"
    name="testname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="testholder"
    status={null}
    style={null}
    theme={null}
    type="file"
    validation={[Function]} />
</div>
`;

exports[`test has focused state 1`] = `
<div
  className="input input--focused"
  style={Object {}}>
  <Label
    disabed={false}
    labelFor="2"
    labelName="Test Name" />
  <input
    autofocus={false}
    className={null}
    classes={null}
    defaultValue={null}
    disabled={false}
    errorTest={null}
    format={[Function]}
    hideLabel={false}
    id="2"
    inputClasses={null}
    label="Test Name"
    name="testname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="testholder"
    status={null}
    style={null}
    theme={null}
    type="file"
    validation={[Function]} />
</div>
`;

exports[`test hides the label 1`] = `
<div
  className="input"
  style={Object {}}>
  <input
    autofocus={false}
    className={null}
    classes={null}
    defaultValue={null}
    disabled={false}
    errorTest={null}
    format={[Function]}
    hideLabel={true}
    id="2"
    inputClasses={null}
    label="Test Name"
    name="testname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="testholder"
    status={null}
    style={null}
    theme={null}
    type="file"
    validation={[Function]} />
</div>
`;

exports[`test overrides with theme 1`] = `
<div
  className="mytheme"
  style={Object {}}>
  <Label
    disabed={false}
    labelFor="2"
    labelName="Test Name" />
  <input
    autofocus={false}
    className={null}
    classes={null}
    defaultValue={null}
    disabled={false}
    errorTest={null}
    format={[Function]}
    hideLabel={false}
    id="2"
    inputClasses={null}
    label="Test Name"
    name="testname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="testholder"
    status={null}
    style={null}
    theme={
      Array [
        "mytheme",
      ]
    }
    type="file"
    validation={[Function]} />
</div>
`;

exports[`test renderHelpText renders if error and error text 1`] = `
<span
  className="input__status">
  error
</span>
`;

exports[`test renderHelpText renders if status 1`] = `
<span
  className="input__status">
  status message
</span>
`;

exports[`test renders with props 1`] = `
<div
  className="input"
  style={Object {}}>
  <Label
    disabed={false}
    labelFor="2"
    labelName="Test Name" />
  <input
    autofocus={false}
    className={null}
    classes={null}
    defaultValue={null}
    disabled={false}
    errorTest={null}
    format={[Function]}
    hideLabel={false}
    id="2"
    inputClasses={null}
    label="Test Name"
    name="testname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="testholder"
    status={null}
    style={null}
    theme={null}
    type="file"
    validation={[Function]} />
</div>
`;
